# release-tool

./: .gitignore  .ort.yml  .release_tool.toml  404.html  Dockerfile  LICENSE  MASTER_TEMPLATE_FEATURE.md  README.md  REUSE.toml  comprehensive_release_notes.py  example_detailed_descriptions.toml  index.html  pyproject.toml  release.py  release_notes.py  requirements.txt  sitemap.xml  tests_comprehensive_release_notes.py  tests_release_notes.py  tests_update_parent_issue.py  update_parent_issue.py
.claude/: README.md  architecture.md  rules.md  update_source_code_refs.py  update_test_configs.py
.github/: dependabot.yml
docs/: branching-strategy.md  configuration.md  development.md  docker.md  docusaurus.config.js  installation.md  intro.md  package-lock.json  policies.md  scenarios.md  sidebars.js  tickets.md  troubleshooting.md  usage.md
examples/: MASTER_TEMPLATE_FEATURE.md  OUTPUT_TEMPLATE_EXAMPLES.md  example_detailed_descriptions.toml  example_flat_list.toml  example_output_template.toml
tests/: conftest.py  test_cancel.py  test_category_validation.py  test_config.py  test_db.py  test_default_template.py  test_docker.py  test_documentation_rc_policy.py  test_e2e_br_tag_conversion.py  test_e2e_cancel.py  test_e2e_generate_policy.py  test_e2e_push_with_pr_code.py  test_git_ops.py  test_git_ops_range.py  test_inclusion_policy.py  test_media_utils.py  test_models.py  test_output_template.py  test_partial_issues.py  test_partial_tickets.py  test_policies.py  test_publish.py  test_publish_just_publish_mode.py  test_pull.py  test_push.py  test_push_just_push_mode.py  (+6 more)
(+210 files in other folders)
