# SPDX-FileCopyrightText: 2025 Sequent Tech Inc <legal@sequentech.io>
#
# SPDX-License-Identifier: MIT

[tool.poetry]
name = "release-tool"
version = "0.1.0"
description = "A tool to manage releases using semantic versioning for release flow."
authors = ["Sequent Tech Inc <legal@sequentech.io>"]
readme = "README.md"
packages = [{ include = "release_tool", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
PyGithub = "^2.1.1"
tomli = "^2.0.1"
tomli-w = "^1.0.0"
tomlkit = "^0.12.0"
click = "^8.1.7"
jinja2 = "^3.1.2"
gitpython = "^3.1.40"
pydantic = "^2.5.0"
rich = "^13.7.0"
requests = "^2.31.0"
packaging = "^23.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"

[tool.poetry.scripts]
release-tool = "release_tool.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
